--- a/src/public/css/usuario/usuario-perfil.css
+++ b/src/public/css/usuario/usuario-perfil.css
@@ -18,7 +18,7 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: "Inter", sans-serif;
-    padding-top: 140px;
+    padding-top: 20px;
 }
 
 .container {
@@ -182,11 +182,8 @@ button[type="submit"]:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    position: fixed;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 100;
+    position: relative;
+    margin-bottom: 30px;
     padding: 10px;
 }
 
@@ -199,7 +196,7 @@ button[type="submit"]:hover {
 /* Responsividade para tablets */
 @media (max-width: 768px) {
     body {
-        padding-top: 130px;
+        padding-top: 20px;
     }
 
     .container {
@@ -227,7 +224,7 @@ button[type="submit"]:hover {
 /* Responsividade para celulares */
 @media (max-width: 480px) {
     body {
-        padding-top: 120px;
+        padding-top: 20px;
     }
 
     .container {
